fix bug for can't remove ip from client, add check for netmap on frontend
